k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  namespace: default
  labels:
    app: flask-app
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  sessionAffinity: None
